--- a/index-slides.html
+++ b/index-slides.html
@@ -122,7 +122,7 @@
                     <h3>Welcome to</h3>
 
                     <h1>
-                        <i><b>Web3Savannah- <h3>Bridging Borders, Connecting Minds.</h3></b></i> <br>
+                        <i><b>Web3Savannah- <h3>Your web3 partner in africa</h3></b></i> <br>
                         <p class="info-block">
                             As we traverse the Web3 Savannah on our collective expedition, we engage in a journey of learning, vibrant discussions, and the construction of a decentralized present and future. From the heart of East Africa, we are shaping a digital landscape that reflects innovation, collaboration, and the spirit of progress.
                         </p>
@@ -164,7 +164,7 @@
                                         <div class="card">
                                             <img src="images/her.png" alt="her.png">
                                             <h3>H.E.R DAO</h3>
-                                            <p> a womxn-focused developer DAO championing innovation & diversity. The new launchpad for womxn led ventures. ✨herdao.substack.com✨</p>
+                                            <p> A women n-focused developer DAO championing innovation & diversity. The new launchpad for womxn led ventures. ✨herdao.substack.com✨</p>
                                         </div>
 
                                         <!-- Card 4 -->
@@ -179,7 +179,7 @@
                             </div>
                             <div>
                                 <section id="content2">
-                                    <a href="#content1" class="scroll-down-link">Do you have Africa strategy?</a>
+                                    <a href="#content1" class="scroll-down-link">Do you have an  Africa strategy?</a>
                                     <div class="home-content__subscribe">
                                         <form id="mc-form" class="group" novalidate="true">
                                             <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
@@ -222,7 +222,7 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>Web3Savannah mission is to Navigate Tech Frontiers, From Africa's Savannah to the Global Digital Peaks</h1>
+                <h1>Web3Savannah's Mission is to Navigate Tech Frontiers, From Africa's Savannah to the Global Digital Peaks</h1>
                 <p class="info-block">
                     <h3> Craft,
                         Develop and Link.
@@ -235,7 +235,7 @@
                 <div class="info-block">
                     <h3>Start A Conversation</h3>
                     <p>
-                        <a href="mailto:#0" class="info-email">sianoikimari@gmail.com</a><br>
+                        <a href="mailto:#0" class="info-email">info@web3savannah.com</a><br>
                         <a href="tel:+25479851990" class="info-phone">+25479851990</a>
                     </p>
                 </div>
@@ -244,9 +244,9 @@
                     <h3>Our Team</h3>
 
                     <p class="info-address">
+                        Sianoi Kimari<br>
                         Kimutai Kitur<br>
-                        Vincent Kwasi<br>
-                        Sianoi Kimari
+                        Vincent Kwasi
                     </p>
                 </div>
 
@@ -259,12 +259,12 @@
                                 <span>Discord</span></a>
                         </li>
                         <li>
-                            <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i>
-                                <span>Twiiter</span></a>
+                            <a href="https://x.com/web3savannah?s=11"><i class="fab fa-twitter" aria-hidden="true"></i>
+                                <span>X</span></a>
                         </li>
                         <li>
-                            <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i>
-                                <span>Telegram</span></a>
+                            <a href="https://instagram.com/web3savannah?utm_source=qr"><i class="fab fa-instagram" aria-hidden="true"></i>
+                                <span>Insta</span></a>
                         </li>
                     </ul>
                 </div>
