Index Page update

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Web3 Savannah<span>.</span></h1>
 
             <p class="lead">
-                This website is under development!
+                Your Gateway to Web3 Africa
             </p>
 
         </div>
@@ -57,7 +57,7 @@
                 <div class="col-block entry">
                     <div class="entry__thumb">
                         <a href="index-slides.html" title="slideshow background">
-                            <img src="images/demo/start.jpg" srcset="images/demo/start.jpg , images/demo/start.jpg" alt="">
+                            <img src="images/logonew.jpeg" srcset="images/logonew.jpeg , images/logonew.jpeg" alt="">
                         </a>
                     </div>
                     <div class="entry__title">
